--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,7 +17,7 @@
     <div id="wrapper">
 
       <header>
-  <img src="/images/logo.png" alt="UCBUGG" />
+  <img src="images/logo.png" alt="UCBUGG" />
       </header>
 
       <section id="">
@@ -33,75 +31,75 @@
 <ol>
 
 
-<li><a href="/getting-maya">Getting Maya</a></li>
+<li><a href="getting-maya">Getting Maya</a></li>
 
 
 
-<li><a href="/introduction-to-maya">Introduction to Maya</a></li>
+<li><a href="introduction-to-maya">Introduction to Maya</a></li>
 
 
 
-<li><a href="/basic-modeling">Basic Modeling</a></li>
+<li><a href="basic-modeling">Basic Modeling</a></li>
 
 
 
-<li><a href="/organic-modeling">Organic Modeling</a></li>
+<li><a href="organic-modeling">Organic Modeling</a></li>
 
 
 
-<li><a href="/basic-rigging">Basic Rigging</a></li>
+<li><a href="basic-rigging">Basic Rigging</a></li>
 
 
 
-<li><a href="/advanced-rigging">Advanced Rigging</a></li>
+<li><a href="advanced-rigging">Advanced Rigging</a></li>
 
 
 
-<li><a href="/skinning">Skinning</a></li>
+<li><a href="skinning">Skinning</a></li>
 
 
 
-<li><a href="/blend-shapes">Blend Shapes</a></li>
+<li><a href="blend-shapes">Blend Shapes</a></li>
 
 
 
-<li><a href="/basic-animation">Basic Animation</a></li>
+<li><a href="basic-animation">Basic Animation</a></li>
 
 
 
-<li><a href="/character-animation">Character Animation</a></li>
+<li><a href="character-animation">Character Animation</a></li>
 
 
 
-<li><a href="/shading">Shading</a></li>
+<li><a href="shading">Shading</a></li>
 
 
 
-<li><a href="/effects">Effects</a></li>
+<li><a href="effects">Effects</a></li>
 
 
 
-<li><a href="/lighting">Lighting</a></li>
+<li><a href="lighting">Lighting</a></li>
 
 
 
-<li><a href="/lighting-a-scene">Lighting a scene</a></li>
+<li><a href="lighting-a-scene">Lighting a scene</a></li>
 
 
 
-<li><a href="/advanced-shading">Advanced Shading</a></li>
+<li><a href="advanced-shading">Advanced Shading</a></li>
 
 
 
-<li><a href="/rendering">Rendering</a></li>
+<li><a href="rendering">Rendering</a></li>
 
 
 
-<li><a href="/dropbox-collaboration">Dropbox Collaboration</a></li>
+<li><a href="dropbox-collaboration">Dropbox Collaboration</a></li>
 
 
 
-<li><a href="/editing">Editing</a></li>
+<li><a href="editing">Editing</a></li>
 
 
 </ol>
