edited some text

--- a/advanced-shading/index.html
+++ b/advanced-shading/index.html
@@ -62,9 +62,9 @@ Filler color to 0,0,0</p>
 <p>Click on lambert. Lambert node will pop up in your workspace. Click on File node. This will also pop up in your workspace. Middle click and drag from the file node to lambert node. Select default from the dropdown menu. Double click on the file node to go to the attribute editor. Click on the folder icon next to the "Image Name". Find the image from your "source images" folder to upload it.<br />
 </p>
 <p>Name your shader and attach to the license plate.  You'll see that the license plate doesn't map quite right. With license plate geo selected, go to Window-&gt;UV Texture Editor.  Click on this icon(image). Now you can scale and move the image so that it fits the source image.</p>
-<h3 id="resources">resources</h3>
-<p>Check out this awesome website called <a href="www.3drender.com">www.3drender.com</a> I think we should do our own <a href="http://www.3drender.com/challenges/carnival/index.html">lighting challenge</a>. We'll be viewing the best shaded/lighted car during the next meeting so please feel free to send me
-<a href="grace@ucbugg.com">-grace email-</a> images of the shaded car :)</p>
+<h3 id="resources">Resources</h3>
+<p>Check out this awesome website called <a href="www.3drender.com">www.3drender.com</a> I think we should do our own <a href="http://www.3drender.com/challenges/carnival/index.html">lighting challenge</a>. We'll be viewing the best shaded/lighted car during the next meeting so please feel free to send us
+<a href="staff@ucbugg.com">-facilitators email-</a> images of the shaded car :)</p>
 
 
       </section>
