Fixed image link

--- a/advanced-shading/index.html
+++ b/advanced-shading/index.html
@@ -18,7 +18,7 @@
     <div id="wrapper">
 
       <header>
-	<img src="/images/logo.png?dte=016" alt="UCBUGG" />
+	<img src="../images/logo.png?dte=016" alt="UCBUGG" />
       </header>
 
       <section id="chapter">
