Fixed download links

--- a/advanced-shading/index.html
+++ b/advanced-shading/index.html
@@ -32,7 +32,7 @@
 <p>In this lab, we are going to learn how to shade a car. Car is an interesting object to shade because it is made from different materials. We will use bump mapping for tires, metal shader for the shell, and transparent glass for the windows. We will also UV map the license plate - so let's get started!</p>
 <p>We will be using hypershade so make sure to enable middle-mouse click!<br />
 </p>
-<p>Download the <a href="/ma/advanced-shading/car.ma">car model.</a></p>
+<p>Download the <a href="../images/advanced-shading/car.ma">car model.</a></p>
 <h3 id="creating_a_metal_shader">Creating a metal shader</h3>
 <p>First we are going to shade the shell of the car. We are going to be using hypershade, which allows us to connect rendering nodes such as materials, textures, lights, etc.</p>
 <p>Open Hypershade (Window-&gt; Rendering Editors -&gt; Hypershade).
