--- a/shading/index.html
+++ b/shading/index.html
@@ -63,7 +63,7 @@ shaders.  We will be revisiting this with our advanced shading lab.</p>
 <p>Now our renderer is set up so we can preview what will be the final product.  We want to set this up since many things we do with the shader can't be seen without rendering (such as bump mapping).</p>
 <p>Now whenever I ask you to render to check your progress, just hit the <strong>render current frame</strong> button at the top next to the render settings button.</p>
 <h2 id="playing_with_shaders">Playing with Shaders</h2>
-<p>If you haven't already, download the <a href="/ma/table_with_fruit.ma">initial boring, grey scene</a></p>
+<p>If you haven't already, download the <a href="../images/shading/table_with_fruit.ma">initial boring, grey scene</a></p>
 <h3 id="shading_the_picture_frame">Shading the Picture Frame</h3>
 <p>Select the picture frame and right-click.  While holding down right-click, select <strong>"Assign new material"</strong> and select <strong>Lambert</strong>.<br />
 </p>
