--- a/basic-animation/index.html
+++ b/basic-animation/index.html
@@ -28,7 +28,7 @@
   You are here: <a href="../">Home</a> &rarr; <a href="../skinning">Skinning</a>
 </p>
 
-<h1 id="skinning_in_maya">Skinning in Maya</h1>
+<h1 id="skinning_in_maya">Animation in Maya</h1>
 <p>Today we are going to be skinning a leg. Before getting started, download the <a href="../ma/skinningtut.ma">leg rig</a> to the <code>scenes</code> directory in your current Maya project.</p>
 <h2 id="what_is_skinning">What is skinning?</h2>
 <p>There are two ways to bind geometry to a rig.<br>
