--- a/basic-animation/index.html
+++ b/basic-animation/index.html
@@ -109,7 +109,7 @@
 <p>Just take note of where all the buttons are located. We will go over why we use these later. </p>
 <p>Also go into View&gt;Tangents and have &ldquo;On Active Keys&rdquo; selected. This way you will always see your tangents and you don&rsquo;t have to select th key first to see the tangent. </p>
 <p>&nbsp;</p>
-<p>Bouncing Ball – Layering Approach </p>
+<h2>Bouncing Ball – Layering Approach </h2>
 <p>Layering means we work with an individual attribute at one time and build up the animation by adding other attributes as we go on. You use this method when animating more complicated things like bodies. For example, you can first animate the root (hips) and then animating the legs, and then the arms, etc. Essentially it just means layering in isolated sections so you don&rsquo;t get confused with many things going on. </p>
 <p>Let&rsquo;s start with the bouncing ball!</p>
 <p>Here is a 2D drawing of what a ball bounce looks like. Notice the way the ball stretches before hitting the ground, squashing, and then rebounding up to its original shape at the top. These are all important notes that we will try to recreate during our ball bounce. </p>
