made change in displacement mapping section of shading tutorial

--- a/shading/index.html
+++ b/shading/index.html
@@ -310,7 +310,7 @@ you can tweak attributes to make them softer. </p>
 <p><img alt="Maya Image" src="../images/shading/shadingpic9.png"
 /> </p>
 
-<h4>Optional</h4>
+<h4>Give it Some Color!</h4>
 <p> Apply a color texture for your rocky terrain. Use the
 color_texture.jpg as the color texture and open Hypershade and move your terrain_shader on
 to the work area. </p>
