--- a/blend-shapes/index.html
+++ b/blend-shapes/index.html
@@ -26,7 +26,7 @@
       
 
 <p>
-  You are here: <a href="../">Home</a> &rarr; <a href="../blend-shapes">Blend Shapes</a>
+  you are here: <a href="../">Home</a> &rarr; <a href="../blend-shapes">Blend Shapes</a>
 </p>
 
 <h1 id="blend_shapes_in_maya">Blend Shapes in Maya</h1>
