why isnt this working

--- a/blend-shapes/index.html
+++ b/blend-shapes/index.html
@@ -29,6 +29,7 @@
   you are here: <a href="../">Home</a> &rarr; <a href="../blend-shapes">Blend Shapes</a>
 </p>
 
+<h1>LARGE OBVIOUS CHANGE</h1>
 <h1 id="blend_shapes_in_maya">Blend Shapes in Maya</h1>
 <p>Today we are going to be rigging a face. Before getring started, download the <a href="../ma/faces.ma">face model</a> to the <code>scenes</code> directory in your current Maya project.</p>
 <h2 id="what_the_heck_are_blend_shapes">What the Heck are Blend Shapes?</h2>
