--- a/blend-shapes/index.html
+++ b/blend-shapes/index.html
@@ -31,6 +31,7 @@
 
 <h1>LARGE OBVIOUS CHANGE</h1>
 <h2>Monica was here.</h2>
+<h2>Ben was also here :O</h2>
 <h1 id="blend_shapes_in_maya">Blend Shapes in Maya</h1>
 <p>Today we are going to be rigging a face. Before getring started, download the <a href="../ma/faces.ma">face model</a> to the <code>scenes</code> directory in your current Maya project.</p>
 <h2 id="what_the_heck_are_blend_shapes">What the Heck are Blend Shapes?</h2>
