blendshape page and image updates

--- a/blend-shapes/index.html
+++ b/blend-shapes/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--wat-->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -40,7 +39,7 @@
 <p><img alt="Sample Expression" src="../images/blend-shapes/sample_expression.jpg" /></p>
 <p>To creat your blend shape, first select all the expression models (except the centeral, neutral expression). Make sure to <strong>select the neutral expression last</strong>. If this model isn't selected last, the blend shape won't work correctly. </p>
 <p>With the models selected, make sure you are under animation tab. Select <strong>Create Deformers&rarr; Blend Shape &rarr; Option box</strong>. The following window should pop up on your display. In advance tab, check <strong> front of chain</strong> as deformation order. Then click create.</p>
-<p><img alt="Blend Shape Window" src="../images/blend-shapes/blend_shape_window.jpg" /></p>
+<p><img alt="Blend Shape Window" src="../images/blend-shapes/blend_shape_window.png" /></p>
     <p>Select <strong>Window &rarr; Animation Editors &rarr; Blend Shape</strong>. This window is the controller of the blend shape that you just created.</p>
 <p><img alt="So Many Sliders" src="../images/blend-shapes/blend_shape_sliders.jpg" /></p>
 <p>Center the screen on the middle face model (Select the model and press F). Play around with the newly-created sliders, sliding them up and down and back again. The face model should respond accordingly, closing its eyes, lowering its brow, and changing its mouth. Each slider controls the amount of blending between the base model and the targeted model. These sliders can be animated, a topic which will be covered later in the course.</p>
