changed getting_maya to match newer interface

--- a/getting-maya/index.html
+++ b/getting-maya/index.html
@@ -32,16 +32,20 @@
 <p>While UCBUGG provides lab computer with Maya installed, it's really important to have your own copy on your computer so that you can work from home on your own schedule.</p>
 <p>This process will require that you have a valid <code>berkeley.edu</code> email address, so make sure you have it handy.</p>
 <h2 id="registering_with_autodesk">Registering with Autodesk</h2>
-<p>Open up a web broswer and go to <a href="http://students.autodesk.com/">http://students.autodesk.com/</a>. On the top menu bar, click the "Get Software" menu item. </p>
-<p><img alt="Click on the Get Software menu item" src="../images/getting-maya/getting_maya_1.jpg" /></p>
-<p>This link will take you to a registration page. Make sure to fill out the "School Email" field with your <code>berkeley.edu</code> email address or this process will not work. You don't need to fill out the "Student Group" and "Student ID" fields. Once you have filled out the form, hit "Submit"</p>
-<p>Autodesk will register your account and send you an activation email. Registration can take a few minutes, so don't worry if the email doesn't show up instantly. Once you get your email, click on the included activation link. You should see a "Registration Complete" message.</p>
-<p><img alt="Registration Complete" src="../images/getting-maya/getting_maya_register.jpg" /></p>
+<p>Open up a web broswer and go to <a href="http://students.autodesk.com/">http://students.autodesk.com/</a>. Close to the center of the page, click the "College &amp; University" button. </p>
+<p><img alt="Click on the College &amp; University button" src="../images/getting-maya/getting_maya_free.jpg" /></p>
+<p>Next scroll down a bit to the list of popular software. Click on "Maya".</p>
+<p><img alt="Click on Maya" scr="../images/getting-maya/getting_maya_2.jpg"
+<p>This link will take you to a registration page. Make sure to fill out the "Email" field with your <code>berkeley.edu</code> email address or this process will not work. Once you have filled out the form, hit "Submit"</p>
+<p>Autodesk will register your account and send you an activation email. Registration can take a few minutes, so don't worry if the email doesn't show up instantly. Once you get your email, click on the included activation link. You should see a "Your account is now activated!" message.</p>
+<p><img alt="Registration Complete" src="../images/getting-maya/getting_maya_activated.jpg" /></p>
 <h2 id="downloading_maya">Downloading Maya</h2>
-<p>Once registration is complete, go back to <a href="http://students.autodesk.com/">http://students.autodesk.com/</a>, log in with your newly created account, and again click on the "Get Software" menu item. Scroll down the page until you see "Autodesk Maya". It is listed under "Other Products". Click on the Autodesk Maya button.</p>
-<p>From the drop-down menu, select which version you want to download. If you are on Windows, download either the 32-bit or 64-bit version, depending on your computer's processor. If you are on a Mac, just download the Mac OS X version. </p>
-<p><img alt="Download Maya dialog" src="../images/getting-maya/getting_maya_download.jpg" /></p>
-<p>Once you select your version, you will be taken to the download page. The download should start automatically, but if not, there is a link at the bottom of the page that will manually start the download. <strong>Make sure to write down your serial number and product, as you will need them during installation</strong>. Maya is a pretty big piece of software (1.2 GB) so make sure you have enough time to download the entire file. I suggest catching up on some reading while you wait. </p>
+<p>Once registration is complete, go back to <a href="http://students.autodesk.com/education/free-software/maya">http://students.autodesk.com/education/free-software/maya</a>, log in with your newly created account, and fill out the second section. </p>
+<p>From the version drop-down menu, select Maya 2013. <p>
+<p>Select "English" from the language drop-down.</p>
+<p>From the operating system drop-down menu, select which version you want to download. If you are on Windows, download either the 32-bit or 64-bit version, depending on your computer's processor. If you are on a Mac, just download the Mac OS X version. </p>
+<p><img alt="Download Maya dialog" src="../images/getting-maya/getting_maya_registration.jpg" /></p>
+<p> <strong>Make sure to write down your serial number and product, as you will need them during installation</strong>. Once you select your version, click the "broswer download" button. The download should start automatically, but if not, check the help links at the bottom of the page. Maya is a pretty big piece of software (2.0 GB) so make sure you have enough time to download the entire file. I suggest catching up on some reading while you wait. </p>
 <h2 id="installing_maya">Installing Maya</h2>
 <p>Once your download is complete, simply run the installer and follow the on screen instructions. The installer will ask for the serial number from the previous section. After you enter your serial number and product key, Maya will install. You are now the proud owner of Maya 2013.</p>
 <p>A warning: Maya's activation process can take quite a while. If you encounter any errors, simply try again with the same data. It should eventually work.</p>
