made small changes to getting_maya file

--- a/getting-maya/index.html
+++ b/getting-maya/index.html
@@ -35,12 +35,13 @@
 <p>Open up a web broswer and go to <a href="http://students.autodesk.com/">http://students.autodesk.com/</a>. Close to the center of the page, click the "College &amp; University" button. </p>
 <p><img alt="Click on the College &amp; University button" src="../images/getting-maya/getting_maya_free.jpg" /></p>
 <p>Next scroll down a bit to the list of popular software. Click on "Maya".</p>
-<p><img alt="Click on Maya" scr="../images/getting-maya/getting_maya_2.jpg"
+<p><img alt="Click on Maya" scr="../images/getting-maya/getting_maya_2.jpg"/></p>
 <p>This link will take you to a registration page. Make sure to fill out the "Email" field with your <code>berkeley.edu</code> email address or this process will not work. Once you have filled out the form, hit "Submit"</p>
 <p>Autodesk will register your account and send you an activation email. Registration can take a few minutes, so don't worry if the email doesn't show up instantly. Once you get your email, click on the included activation link. You should see a "Your account is now activated!" message.</p>
 <p><img alt="Registration Complete" src="../images/getting-maya/getting_maya_activated.jpg" /></p>
+
 <h2 id="downloading_maya">Downloading Maya</h2>
-<p>Once registration is complete, go back to <a href="http://students.autodesk.com/education/free-software/maya">http://students.autodesk.com/education/free-software/maya</a>, log in with your newly created account, and fill out the second section. </p>
+<p>Once registration is complete, go back to <a href="http://students.autodesk.com/education/free-software/maya/">http://students.autodesk.com/education/free-software/maya</a>, log in with your newly created account, and fill out the second section. </p>
 <p>From the version drop-down menu, select Maya 2013. <p>
 <p>Select "English" from the language drop-down.</p>
 <p>From the operating system drop-down menu, select which version you want to download. If you are on Windows, download either the 32-bit or 64-bit version, depending on your computer's processor. If you are on a Mac, just download the Mac OS X version. </p>
