--- a/getting-maya/index.html
+++ b/getting-maya/index.html
@@ -35,7 +35,7 @@
 <p>Open up a web broswer and go to <a href="http://students.autodesk.com/">http://students.autodesk.com/</a>. Close to the center of the page, click the "College &amp; University" button. </p>
 <p><img alt="Click on the College &amp; University button" src="../images/getting-maya/getting_maya_free.jpg" /></p>
 <p>Next scroll down a bit to the list of popular software. Click on "Maya".</p>
-<p><img alt="Click on Maya" scr="../images/getting-maya/getting_maya_2.jpg"/></p>
+<p><img alt="Click on Maya" src="../images/getting-maya/getting_maya_2.jpg" /></p>
 <p>This link will take you to a registration page. Make sure to fill out the "Email" field with your <code>berkeley.edu</code> email address or this process will not work. Once you have filled out the form, hit "Submit"</p>
 <p>Autodesk will register your account and send you an activation email. Registration can take a few minutes, so don't worry if the email doesn't show up instantly. Once you get your email, click on the included activation link. You should see a "Your account is now activated!" message.</p>
 <p><img alt="Registration Complete" src="../images/getting-maya/getting_maya_activated.jpg" /></p>
